# TerminalLogParser

./: .gitignore  CLAUDE.md  CMakeLists.txt  HelixDebug.h  LICENSE  README.md  log.txt
.claude/: settings.local.json
src/: LogEntry.hpp  LogParser.cpp  LogParser.hpp  main.cpp
